# project_root

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum
cc_server/client/: BUILD.bazel  main.cc
cc_server/protos/: BUILD.bazel  ping_service.proto
cc_server/server/: BUILD.bazel  main.cc  ping_service_impl.cc  ping_service_impl.h
golang_server/cmd/client/: BUILD.bazel  cfg.go  main.go
golang_server/cmd/server/: BUILD.bazel  main.go
golang_server/internal/server/: BUILD.bazel  hello_service.go  pong_service.go
golang_server/protos/: BUILD.bazel  hello_service.proto  pong_service.proto
