"""
project_root is an example of how to create an RPC server using bazel build system.
"""

module(
    name = "project_root",
    version = "0.1.0",
    compatibility_level = 1,
)

# Core Bazel dependencies.
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "gazelle", version = "0.43.0")

# Protobuf dependencies.
bazel_dep(name = "protobuf", version = "31.0-rc2", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "grpc", version = "1.72.0")

# Cpp related.
bazel_dep(name = "abseil-cpp", version = "20250127.1")

# Go SDK configuration and Gazelle interop.
# See https://github.com/bazel-contrib/rules_go/blob/master/docs/go/core/bzlmod.md
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.24.2",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_glog",          # For github.com/golang/glog
    "org_golang_google_grpc",          # For google.golang.org/grpc
    "org_golang_google_protobuf",      # For google.golang.org/protobuf (Go Protobuf runtime)
)

# OCI Image dependencies.
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static_debian12",
    image = "gcr.io/distroless/static-debian12",
    platforms = [
        "linux/amd64",
    ],
    tag="latest",
)
use_repo(
    oci,
    "distroless_static_debian12",
)
