load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = [
        "//cc_server/cmd/client:__subpackages__",
    ],
)

cc_binary(
    name = "client",
    srcs = [
        "main.cc",
    ],
    deps = [
        "//cc_server/protos:service_cc_grpc",
        "//cc_server/protos:service_cc_proto",
        "@abseil-cpp//absl/log:absl_log",
        "@grpc//:grpc++",
    ],
)
