load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(
    default_visibility = [
        "//:__subpackages__",
    ],
)

filegroup(
    name = "proto_files",
    srcs = [
        "ping_service.proto",
    ],
)

proto_library(
    name = "service_proto",
    srcs = [":proto_files"],
    deps = ["@com_google_protobuf//:go_features_proto"],
)

cc_proto_library(
    name = "service_cc_proto",
    deps = [":service_proto"],
)

cc_grpc_library(
    name = "service_cc_grpc",
    srcs = [":service_proto"],
    grpc_only = True,
    deps = [":service_cc_proto"],
)

go_proto_library(
    name = "service_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/Makoto2024/project_root/cc_server/protos/servicepb",
    proto = ":service_proto",
)
