load("@rules_go//go:def.bzl", "go_binary")

package(
    default_visibility = ["//visibility:private"],
)

go_binary(
    name = "server",
    srcs = [
        "main.go",
    ],
    deps = [
        "//golang_server/internal/server",
        "//golang_server/protos:service_go_proto",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
    ],
)
