load("@rules_go//go:def.bzl", "go_library")

package(
    default_visibility = [
        "//golang_server/cmd/server:__subpackages__",
    ],
)

go_library(
    name = "server",
    srcs = [
        "hello_service.go",
        "pong_service.go",
    ],
    importpath = "github.com/Makoto2024/project_root/golang_server/internal/server",
    deps = [
        "//cc_server/protos:service_go_proto",
        "//golang_server/protos:service_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//proto",
    ],
)
